--- a/test.html
+++ b/test.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>2ème page</title>
 </head>
 <body>
-    
+    <h1>Rien à signaler</h1>
+
+    <ul>
+        <li>element 1</li>
+        <li>element 2
+            <ol>
+                <li>element 2 a</li>
+                <li>element 2 b</li>
+            </ol>
+        </li>
+        <li>element 3</li>
+    </ul>
 </body>
 </html>
